# rust-polars_s3

./: Cargo.toml  README.md  path.csv
src/: lib.rs
