[package]
name = "polars_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object_store = "0.6.1"
polars = { version = "0.31.1", features = ["csv", "json", "serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
